--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "firebase": "^11.9.0",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
@@ -64,6 +64,7 @@
     "next-themes": "^0.4.6",
     "openid-client": "^6.6.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "react": "^18.3.1",
