--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
+    "react-player": "^3.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "serverless-http": "^3.2.0",
@@ -81,6 +82,7 @@
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
+    "yt-search": "^2.13.1",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
@@ -98,6 +100,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
+    "@types/yt-search": "^2.10.3",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
