--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,63 @@
+# Dependencies
 node_modules
-node_modules
+node_modules/
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+*.env
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# IDE files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+.cache/
+.temp/
+tmp/
+temp/
+
+# Replit specific
+.replit
+replit.md
+replit_zip_error_log.txt
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Session store
+sessions/
