--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vercel-build": "vite build"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
@@ -63,18 +64,22 @@
     "embla-carousel-react": "^8.6.0",
     "esbuild": "^0.25.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
     "firebase": "^11.9.0",
     "framer-motion": "^11.13.1",
+    "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
+    "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "openid-client": "^6.6.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.11.3",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
@@ -86,6 +91,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "serverless-http": "^3.2.0",
+    "soundcloud-scraper": "^5.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
@@ -95,7 +101,7 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "yt-search": "^2.13.1",
-    "zod": "^3.24.2",
+    "zod": "^3.25.76",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
@@ -103,6 +109,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
