--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "@tanstack/react-query-devtools": "^5.80.10",
     "@types/cors": "^2.8.19",
     "@types/memoizee": "^0.4.12",
+    "@types/morgan": "^1.9.10",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.8.1",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.6",
     "date-fns": "^3.6.0",
@@ -73,6 +75,7 @@
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "openid-client": "^6.6.2",
@@ -85,11 +88,13 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-player": "^3.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
+    "sentiment": "^5.0.2",
     "serverless-http": "^3.2.0",
     "soundcloud-scraper": "^5.0.3",
     "tailwind-merge": "^2.6.0",
@@ -106,6 +111,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@types/compression": "^1.8.1",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
@@ -115,6 +121,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/sentiment": "^5.0.4",
     "@types/ws": "^8.5.13",
     "@types/yt-search": "^2.10.3",
     "drizzle-kit": "^0.30.4",
