--- a/package.json
+++ b/package.json
@@ -43,32 +43,26 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "@replit/vite-plugin-cartographer": "^0.2.7",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.80.10",
-    "@types/cors": "^2.8.19",
-    "@types/memoizee": "^0.4.12",
-    "@types/morgan": "^1.9.10",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "compression": "^1.8.1",
     "connect-pg-simple": "^10.0.0",
+    "cookie": "^1.1.1",
     "cors": "^2.8.6",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
-    "esbuild": "^0.25.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
     "firebase": "^11.9.0",
+    "firebase-admin": "^13.6.1",
     "framer-motion": "^11.13.1",
     "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
@@ -84,7 +78,6 @@
     "passport-local": "^1.0.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.11.3",
-    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -110,11 +103,17 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@replit/vite-plugin-cartographer": "^0.2.7",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/vite": "^4.1.3",
     "@types/compression": "^1.8.1",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cookie": "^0.6.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/memoizee": "^0.4.12",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
@@ -124,9 +123,14 @@
     "@types/sentiment": "^5.0.4",
     "@types/ws": "^8.5.13",
     "@types/yt-search": "^2.10.3",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
+    "esbuild": "^0.25.0",
+    "postcss": "^8.4.47",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vite": "^5.4.14"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
